# For-tasks-v2

./: database.py  main.py  pyproject.toml  requirements.txt
core/: config.py
tasks/: counter_of_download.py  create_pdf.py  create_pdf_by_user.py  create_pdf_for_user_by_template.py  crud.py  schemas.py  test_view.py  view.py
tasks/templates/: template.html
users/: crud.py  schemas.py  view.py
дампы_зависимости/: requirements.txt  карточки.sql
