[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Gapenysh <bulathai2004@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
pydantic = {extras = ["email"], version = "^2.8.2"}
setuptools = "^72.1.0"

pydentic = {extras = ["settings"], version = "^0.0.1.dev3"}
pydantic-settings = "^2.4.0"


markupsafe = "^2.1.5"
mysqlclient = "^2.2.4"
aiomysql = "^0.2.0"
mysql = "^0.0.3"
mysql-connector = "^2.2.9"
mysql-connector-python = "^9.0.0"
pdfkit = "^1.0.0"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
